--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,20 +10,9 @@
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
-
-        <Button
-                android:id="@+id/viewEntriesButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/view_entries_button"/>
-
-        <Button
-                android:id="@+id/openChartButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/open_chart_button"/>
     </LinearLayout>
 
-    <ImageView android:id="@+id/animalWindow" android:layout_height="match_parent" android:layout_width="match_parent"/>
+    <ImageView android:id="@+id/animalWindow" android:layout_height="match_parent" android:layout_width="match_parent"
+               android:scaleType="center"/>
 
 </LinearLayout>
