--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -9,6 +9,12 @@
             <item android:id="@+id/supper" android:title="@string/supper_item"/>
         </menu>
     </item>
+    <item android:icon="@drawable/drink" android:title="@string/main_menu_drink">
+        <menu>
+            <item android:id="@+id/water" android:title="@string/water_item" />
+            <item android:id="@+id/carrot_juice" android:title="@string/carrot_juice_item" />
+        </menu>
+    </item>
     <item android:id="@+id/bed" android:icon="@drawable/bed"
           android:title="@string/main_menu_bed"/>
     <item android:id="@+id/walk" android:icon="@drawable/walk"
