--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,4 +15,37 @@
                android:layout_centerInParent="true"/>
     <ImageView android:id="@+id/artifact3" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
+    <LinearLayout android:id="@+id/wellbeing_layout" android:layout_height="wrap_content"
+                  android:layout_width="wrap_content"
+                  android:layout_alignParentRight="true" android:layout_alignParentTop="true"
+                  android:orientation="vertical">
+        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
+                      android:orientation="horizontal">
+            <TextView android:id="@+id/food_wellbeing_text" android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="@string/food_wellbeing"/>
+            <android.widget.RatingBar android:id="@+id/food_wellbeing_star" android:layout_height="wrap_content"
+                                      android:layout_width="wrap_content"
+                                      android:numStars="1" android:max="3"/>
+        </LinearLayout>
+        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
+                      android:orientation="horizontal">
+            <TextView android:id="@+id/drink_wellbeing_text" android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="@string/drink_wellbeing"
+                      android:textAppearance="@android:style/TextAppearance.Large"/>
+            <android.widget.RatingBar android:id="@+id/drink_wellbeing_star" android:layout_height="wrap_content"
+                                      android:layout_width="wrap_content"
+                                      android:numStars="1" android:max="3"/>
+        </LinearLayout>
+        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
+                      android:orientation="horizontal">
+            <TextView android:id="@+id/walk_wellbeing_text" android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="@string/walk_wellbeing"/>
+            <android.widget.RatingBar android:id="@+id/walk_wellbeing_star" android:layout_height="wrap_content"
+                                      android:layout_width="wrap_content"
+                                      android:numStars="1" android:max="3"/>
+        </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
