--- a/res/values/dimensions.xml
+++ b/res/values/dimensions.xml
@@ -5,5 +5,8 @@
     <dimen name="id_gap">10dp</dimen>
     <dimen name="value_gap">20dp</dimen>
     <dimen name="artifact1_bottom_margin">50dip</dimen>
+    <dimen name="appwidget_minwidth">110dp</dimen>
+    <dimen name="appwidget_minheight">40dp</dimen>
+    <dimen name="wellbeing_status_text_padding">5dp</dimen>
 
 </resources>
