--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,5 @@
 <resources>
+    <drawable name="transparent_background">#00000000</drawable>
     <color name="gesture_recognized">#40ffff00</color>
     <color name="gesture_unknown">#10ffff00</color>
     <color name="wellbeing_good">#ff00ff00</color>
