--- a/res/layout/appwidget.xml
+++ b/res/layout/appwidget.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" android:background="@android:color/background_light">
+                android:layout_width="fill_parent" android:layout_height="fill_parent">
     <ImageView android:id="@+id/widget_animal_view" android:layout_height="match_parent"
-               android:layout_width="match_parent"/>
+               android:layout_width="match_parent" android:layout_alignParentLeft="true"
+               android:layout_alignParentBottom="true"/>
+    <Button android:id="@+id/widget_button" android:layout_height="wrap_content" android:layout_width="wrap_content"
+            android:text="@string/widget_button_text" android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
