--- a/res/layout/wellbeing_status.xml
+++ b/res/layout/wellbeing_status.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent" android:orientation="horizontal">
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content" android:orientation="horizontal">
     <TextView android:id="@+id/wellbeing_status_text" android:layout_width="wrap_content"
-              android:layout_height="wrap_content" android:padding="@dimen/wellbeing_status_text_padding"/>
+              android:layout_height="wrap_content" android:padding="@dimen/wellbeing_status_text_padding"
+              android:textAppearance="?android:attr/textAppearanceLarge" android:text="Hej!"/>
 
 </LinearLayout>
